--- a/kinematics_es.html
+++ b/kinematics_es.html
@@ -7,18 +7,11 @@
         <meta name="author" content="Miguel Angel Alvaro">
         <meta name="description"
             content="Subpage showing information about kinematics."
-        >
-        
+        >       
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <!--Load math.js library https://mathjs.org/ -->
-        <script src="https://unpkg.com/mathjs@13.0.0/lib/browser/math.js"></script>
         
         <!-- load Mathjax library -->
         <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
-
-        <!-- loads page script files-->
-        <script type="module" src="scripts/KinematicsPage.js"></script>
     </head>
     <body>
         <header><h1>CINEMÁTICA</h1></header>
@@ -843,5 +836,7 @@
                 </table>
             </section>
         </article>
+        <!--Load the JavaScript file for the vectors page -->
+        <script type="module" src="./src/pages/kinematicsPage.js"></script>
     </body>
 </html>
