--- a/geometry_es.html
+++ b/geometry_es.html
@@ -13,9 +13,6 @@
 	<!--To set the viewport of the page, which will give the browser instructions on how to control the page's dimensions and scaling.-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!--Load math.js library https://mathjs.org/ -->
-    <script src="https://unpkg.com/mathjs@13.0.0/lib/browser/math.js"></script>
-
     <script>
         window.MathJax = {
             loader: {
@@ -34,9 +31,6 @@
 		
     <!-- load Mathjax library-->
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
-
-    <!-- loads page script files-->
-    <script type="module" src="scripts/geometryPage.js"></script>
 </head>
 
 <body>
@@ -501,7 +495,9 @@
                 </li>
             </ul>
         </aside>
-    </article>    
+    </article>
+    <!--Load the JavaScript file for the geometry page -->
+    <script type="module" src="./src/pages/geometryPage.js"></script>    
 </body>
 
 </html>
