Refactor code structure for improved readability and maintainability

--- a/public/geometry_es.html
+++ b/public/geometry_es.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
     <title>TheHouseOfPhi Geometría</title>
     <meta name="author" content="Miguel Angel Alvaro">
     <meta name="description"
@@ -40,7 +40,7 @@
         </header>
         <nav> <!--Navigation bar. Links to the site's main sections-->
             <ul>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="#Geometry">Geometría</a></li>
             </ul>
 	    </nav>
@@ -121,7 +121,7 @@
                 \end{flalign}
             </p>
             <figure class="centered"><!--Right triangle with hypotenuse c and legs a and b.-->
-                <img src="images\RightTriangle.svg" width="300" height="225" alt="Diagrama de un triángulo rectángulo"/>
+                <img src="../images/RightTriangle.svg" width="300" height="225" alt="Diagrama de un triángulo rectángulo"/>
                 <figcaption><b>Figura 1.2</b> Triángulo rectángulo con catetos a y b, e hipotenusa c.</figcaption>
             </figure>
 
@@ -358,7 +358,7 @@
                 <div  class="right" id="[1]">[2]</div>
             </div>
             <figure class="centered"><!--Right triangle with hypotenuse c and legs a and b.-->
-                <img src="images\RightTriangle.svg" width="300" height="225" alt="Diagrama de un triángulo rectángulo"/>
+                <img src="../images/RightTriangle.svg" width="300" height="225" alt="Diagrama de un triángulo rectángulo"/>
                 <figcaption><b>Figura 1</b> Triángulo rectángulo con catetos a y b, e hipotenusa c.</figcaption>
             </figure>
         </section>
@@ -367,7 +367,7 @@
                 Consideremos una circunferencia con radio de longitud r con centro en el origen <i>O</i> en a sistema de coordenadas rectangulares, y un punto P con coordenadas (x,y) en la circunferencia. Y nombremos &alpha; a el ángulo entre el eje x y el segmento \(\overline {OP}\), según se muestra en la siguiente figura. Entonces, \(\sin \alpha\) es el cociente y/r.
             </p>
             <figure class="centered"><!--Circunference of radius r with a point P and angle &alpha; with x-axis.-->
-                <img src="images\Circunference_and_coordinates.svg" 
+                <img src="../images/Circunference_and_coordinates.svg" 
                     width="300" 
                     height="300" 
                     alt="Diagrama de una circunferencia con punto P y triángulo rectángulo inscrito."/>
@@ -497,7 +497,7 @@
         </aside>
     </article>
     <!--Load the JavaScript file for the geometry page -->
-    <script type="module" src="./src/pages/geometryPage.js"></script>    
+    <script type="module" src="../src/pages/geometryPage.js"></script>    
 </body>
 
 </html>
