--- a/public/vectors_es.html
+++ b/public/vectors_es.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="../styles/styles.css">
         <title>TheHouseOfPhi Vectores</title>
         <meta name="author" content="Miguel Angel Alvaro">
         <meta name="description"
@@ -36,7 +36,7 @@
         </header>
         <nav>
 			<ul>
-            	<li><a href="index.html">Inicio</a></li>
+            	<li><a href="../index.html">Inicio</a></li>
             	<li><a href="#Teoría">1.1 Teoría</a></li>
             	<li><a href="#Ejercicios con vectores">1.2 Ejercicios con vectores</a></li>
         	</ul>
@@ -130,7 +130,7 @@
                     En la Figura 1.4 (a), el eje z positivo se muestra sobre el plano que contiene los ejes x e y. El sistema que se muestra sigue la regla de la mano derecha. Si tomamos nuestra mano derecha y alineamos los dedos con el eje x positivo, luego dobla los dedos para que apunten en la dirección del eje y positivo, nuestro pulgar apunta en la dirección del eje z positivo. En este sitio web, siempre trabajamos con sistemas de coordenadas configurados de acuerdo con la regla de la mano derecha. Algunos sistemas siguen una regla de la mano izquierda, pero la regla de la mano derecha se considera la representación estándar.
                 </p>
                 <figure class="centered">
-                    <img src="images\3DCoordSystAndRightHandRule.svg" 
+                    <img src="../images/3DCoordSystAndRightHandRule.svg" 
                         width="600" 
                         height="300" 
                         alt=""/>
@@ -924,7 +924,7 @@
             </section>
         </article>
         <!--Load the JavaScript file for the vectors page -->
-        <script type="module" src="./src/pages/vectorsPage.js"></script>
-        <script type="module" src="./src/forms/vectorsForm.js"></script>
+        <script type="module" src="../src/pages/vectorsPage.js"></script>
+        <script type="module" src="../src/forms/vectorsForm.js"></script>
     </body>
 </html>
