Add SVG images for right triangle and vector components; create address file and CSS styles
- Added RightTriangle.svg and Vector_components_2D.svg to src/images for geometric representation.
- Created address.txt in src/images containing primary and secondary endpoint URLs.
- Introduced vector.svg with an arrow marker for visual representation.
- Added styles.css with comprehensive styles for body, sections, and various elements, including tables and mathematical expressions.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./src/styles/styles.css">
     <title>The House of Phi</title>
     <meta name="author" content="Miguel Angel Alvaro">
     <meta name="description"
@@ -20,7 +20,7 @@
 <main>
 
     <figure>
-        <img src="./images/CuriousMonkey.jpg" alt="A curious monkey" width="320" height="227">
+        <img src="./src/images/CuriousMonkey.jpg" alt="A curious monkey" width="320" height="227">
     </figure>
 
     <label class="lang lang-en" lang="en" for="langSelector">Select Language:</label>
@@ -33,15 +33,15 @@
 
     <nav>
         <ul class="lang lang-en" lang="en">
-            <li><a href="./public/vectors.html">1. Vectors</a></li>
-            <li><a href="./public/kinematics.html">2. Kinematics</a></li>
-            <li><a href="./public/geometry.html">A1. Geometry</a></li>
+            <li><a href="/vectors.html">1. Vectors</a></li>
+            <li><a href="/kinematics.html">2. Kinematics</a></li>
+            <li><a href="/geometry.html">A1. Geometry</a></li>
         </ul>
 
         <ul class="lang lang-es" lang="es">
-            <li><a href="./public/vectors_es.html">1. Vectores</a></li>
-            <li><a href="./public/kinematics_es.html">3. Cinemática</a></li>
-            <li><a href="./public/geometry_es.html">A1. Geometría</a></li>
+            <li><a href="/vectors_es.html">1. Vectores</a></li>
+            <li><a href="/kinematics_es.html">3. Cinemática</a></li>
+            <li><a href="/geometry_es.html">A1. Geometría</a></li>
         </ul>
     </nav>
 
