--- a/public/kinematics.html
+++ b/public/kinematics.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="../styles/styles.css">
+        <link rel="stylesheet" href="/src/styles/vectors.css">
         <title>TheHouseOfPhi Kinematics</title>
         <meta name="author" content="Miguel Angel Alvaro">
         <meta name="description"
@@ -19,7 +19,7 @@
         <header><h1>KINEMATICS</h1></header>
         <nav>
 			<ul>
-            	<li><a href="../index.html">Home</a></li>
+            	<li><a href="/index.html">Home</a></li>
             	<li><a href="#Theory">1. Theory</a></li>
             	<li><a href="#Kinematics Exercises">2. Kinematics Exercises</a></li>
         	</ul>
@@ -848,6 +848,6 @@
             </section>                                                
         </article>
         <!--Load the JavaScript file for the vectors page -->
-        <script type="module" src="../src/pages/kinematicsPage.js"></script>
+        <script type="module" src="/src/pages/kinematicsPage.js"></script>
     </body>
 </html>
