--- a/public/kinematics_es.html
+++ b/public/kinematics_es.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="../styles/styles.css">
+        <link rel="stylesheet" href="/src/styles/vectors.css">
         <title>TheHouseOfPhi Cinematica</title>
         <meta name="author" content="Miguel Angel Alvaro">
         <meta name="description"
@@ -16,7 +16,7 @@
     <body>
         <header><h1>CINEMÁTICA</h1></header>
         <ul>
-            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="/index.html">Inicio</a></li>
             <li><a href="#Teoría">1. Teoría</a></li>
             <li><a href="#Ejercicios de cinemática">2. Ejercicios de cinemática</a></li>
         </ul>
@@ -837,6 +837,6 @@
             </section>
         </article>
         <!--Load the JavaScript file for the vectors page -->
-        <script type="module" src="../src/pages/kinematicsPage.js"></script>
+        <script type="module" src="/src/pages/kinematicsPage.js"></script>
     </body>
 </html>
