--- a/public/vectors.html
+++ b/public/vectors.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="../styles/styles.css">
+        <link rel="stylesheet" href="/src/styles/vectors.css">
         <title>TheHouseOfPhi Vectors</title>
         <meta name="author" content="Miguel Angel Alvaro">
         <meta name="description"
@@ -34,7 +34,7 @@
         <header><h1>1. VECTORS</h1></header>
         <nav>
 			<ul>
-            	<li><a href="../index.html">Home</a></li>
+            	<li><a href="/index.html">Home</a></li>
             	<li><a href="#Theory">1.1 Theory</a></li>
             	<li><a href="#Vector Operations Exercises">1.2 Vector Exercises</a></li>
         	</ul>
@@ -131,7 +131,7 @@
                     In Figure 1.4(a), the positive z-axis is shown above the plane containing the x- and y-axes. The system displayed follows the right-hand rule. If we take our right hand and align the fingers with the positive x-axis, then curl the fingers so they point in the direction of the positive y-axis, our thumb points in the direction of the positive z-axis. In this website, we always work with coordinate systems set up in accordance with the right-hand rule. Some systems do follow a left-hand rule, but the right-hand rule is considered the standard representation.
                 </p>
                 <figure class="centered">
-                    <img src="../images/3DCoordSystAndRightHandRule.svg" 
+                    <img src="/src/images/3DCoordSystAndRightHandRule.svg" 
                         width="600" 
                         height="300" 
                         alt=""/>
@@ -926,7 +926,7 @@
                 </aside>
         </article> 
         <!--Load the JavaScript file for the vectors page -->
-        <script type="module" src="../src/pages/vectorsPage.js"></script>     
-        <script type="module" src="../src/forms/vectorsForm.js"></script>  
+        <script type="module" src="/src/pages/vectorsPage.js"></script>     
+        <script type="module" src="/src/forms/vectorsForm.js"></script>  
     </body>
 </html>
