--- a/public/geometry.html
+++ b/public/geometry.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="../styles/styles.css">
+    <link rel="stylesheet" href="/src/styles/vectors.css">
     <title>TheHouseOfPhi Geometry</title>
     <meta name="author" content="Miguel Angel Alvaro">
     <meta name="description"
@@ -41,7 +41,7 @@
 
 	<nav> <!--Navigation bar. Links to the site's main sections-->
 		<ul>
-			<li><a href="../index.html">Home</a></li>
+			<li><a href="/index.html">Home</a></li>
 			<li><a href="#Geometry">Geometry</a></li>
 		</ul>
 	</nav>
@@ -62,7 +62,7 @@
             <div  class="right" id="[2.1]">[2.2]</div>
         </div>
         <figure class="centered"><!--Right triangle with hypotenuse c and legs a and b.-->
-            <img src="../images/RightTriangle.svg" 
+            <img src="/src/images/RightTriangle.svg" 
                 width="300" 
                 height="225" 
                 alt="Right triangle diagram"/>
@@ -76,7 +76,7 @@
             rectangular coordinate system, and a point P with coordinates (x,y) in the circunference. And let's name &alpha; the angle between the x-axis and the segment \(\overline {OP}\), as shown in figure below. Then, \(\sin \alpha\) is the ratio y/r, `cos alpha` is the ratio x/r and \(\tan \alpha\) is the ratio y/x.
         </p>
         <figure class="centered"><!--Circunference of radius r with a point P and angle &alpha; with x-axis.-->
-            <img src="../images/Circunference_and_coordinates.svg" 
+            <img src="/src/images/Circunference_and_coordinates.svg" 
                 width="300" 
                 height="300" 
                 alt="Diagram of a circle with point P and inscribed right triangle."/>
@@ -139,7 +139,7 @@
         </ul>
     </aside>
     <!--Load the JavaScript file for the geometry page -->
-    <script type="module" src="../src/pages/geometryPage.js"></script>        
+    <script type="module" src="/src/pages/geometryPage.js"></script>        
 </body>
 
 </html>
