Actualizar enlaces de hojas de estilo en archivos HTML para usar styles.css en lugar de vectors.css

--- a/public/kinematics_es.html
+++ b/public/kinematics_es.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="/src/styles/vectors.css">
+        <link rel="stylesheet" href="/src/styles/styles.css">
         <title>TheHouseOfPhi Cinematica</title>
         <meta name="author" content="Miguel Angel Alvaro">
         <meta name="description"
