--- a/public/geometry.html
+++ b/public/geometry.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/src/styles/vectors.css">
+    <link rel="stylesheet" href="/src/styles/styles.css">
     <title>TheHouseOfPhi Geometry</title>
     <meta name="author" content="Miguel Angel Alvaro">
     <meta name="description"
