--- a/public/kinematics.html
+++ b/public/kinematics.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="/src/styles/vectors.css">
+        <link rel="stylesheet" href="/src/styles/styles.css">
         <title>TheHouseOfPhi Kinematics</title>
         <meta name="author" content="Miguel Angel Alvaro">
         <meta name="description"
