Corregir rutas de archivos en index.html para asegurar la carga correcta de recursos

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="./src/styles/styles.css">
+    <link rel="stylesheet" href="/src/styles/styles.css">
     <title>The House of Phi</title>
     <meta name="author" content="Miguel Angel Alvaro">
     <meta name="description"
@@ -20,7 +20,7 @@
 <main>
 
     <figure>
-        <img src="./src/images/CuriousMonkey.jpg" alt="A curious monkey" width="320" height="227">
+        <img src="/src/images/CuriousMonkey.jpg" alt="A curious monkey" width="320" height="227">
     </figure>
 
     <label class="lang lang-en" lang="en" for="langSelector">Select Language:</label>
@@ -66,7 +66,7 @@
     </p>
 </footer>
 
-<script type="module" src="./src/forms/indexForm.js"></script>
+<script type="module" src="/src/forms/indexForm.js"></script>
 
 </body>
 </html>
